# optimal-testing

./: .gitignore  .gitmodules  README.md  canton_daily_cases.npy  canton_shapes.npy  common.py  get-data.py  launch.sh  model.py  nested.py  osp.py  ospStandalone.py  plot-ots.py  plot-scenarios.py  plot.py  plot_nested_sampling_results.py  post_processing.py  print-tables.py  python-path.sh  run-sampling.py  run-sequential-standalone.py  run-sequential.py  samples.py  seiin.py  sensor_placement.py  submit.sh  submit1.sh  submit2.sh  submit3.sh  swiss_cantons.py
covid19/: CMakeLists.txt  README.rst
covid19/epidemics/: __init__.py  model.py  swiss_cantons.py
covid19/epidemics/cache/: bfs_residence_work_cols12568.df.csv  home_work_people.json
covid19/epidemics/cantons/: .gitignore
covid19/epidemics/cantons/data/: asymmetry.py
covid19/epidemics/cantons/data/2017/: .gitignore  README.md  cache.py  matrix.json  (+2 more)
covid19/epidemics/cantons/py/: model.py
covid19/epidemics/data/: __init__.py  swiss_cantons.py
covid19/epidemics/data/files/: canton_population.py  switzerland_commute_admin_ch.csv
covid19/epidemics/files/: README.md  official_lockdowns.csv  shapefile_to_polygons.py
covid19/epidemics/tools/: cache.py  io.py  tools.py
covid19/src/: base.h  bindings.cpp  data.cpp  data.h  integrator.h  integrator.hh  model.cpp  model.h  seiin_interventions.h
covid19/src/bindings/: bindings.cpp  bindings.h  cantons.h  cantons.seiin_interventions.cpp  common.h
covid19/src/utils/: assert.cpp  assert.h  signal.cpp  signal.h
covid19/tests/: common.py  test_cantons_seiin_interventions.py
(+55 files in other folders)
